--- a/Planet-Swap/View/LaunchScreen.storyboard
+++ b/Planet-Swap/View/LaunchScreen.storyboard
@@ -16,9 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="thr-yb-z25">
-                                <rect key="frame" x="-77" y="-69" width="528" height="804"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Planet Swap" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cm2-2n-QJ7">
                                 <rect key="frame" x="48" y="209" width="279" height="173"/>
                                 <constraints>
@@ -30,20 +27,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="-77" id="2YU-u9-ISU"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="-69" id="7hS-cN-MUK"/>
                             <constraint firstItem="Cm2-2n-QJ7" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="209" id="F9v-B9-5gh"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="-69" id="Ih3-PA-WFG"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" constant="76" id="SbL-im-l3A"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="Cm2-2n-QJ7" secondAttribute="bottom" constant="285" id="Sug-LK-Gf4"/>
                             <constraint firstItem="Cm2-2n-QJ7" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="48" id="gX8-hM-HbW"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" constant="68" id="iga-xt-gb1"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="-77" id="iuu-5e-gFV"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" constant="76" id="l5s-E1-a88"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="Cm2-2n-QJ7" secondAttribute="trailing" constant="48" id="nhT-1S-XPJ"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" constant="68" id="sFQ-MK-ha5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
@@ -53,7 +42,4 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Background" width="198" height="353.66665649414062"/>
-    </resources>
 </document>
