--- a/Planet-Swap/View/SpaceAlert.xib
+++ b/Planet-Swap/View/SpaceAlert.xib
@@ -29,7 +29,7 @@
             <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="cXY-11-Bcr"/>
-            <point key="canvasLocation" x="252" y="-200"/>
+            <point key="canvasLocation" x="250.72463768115944" y="-200.22321428571428"/>
         </view>
     </objects>
 </document>
